# mcp-hub

./: .gitignore  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml
mcp-client/: client.py  config.py  json_mcp.py  llm_factory.py  main.py  mcp.json  react_agent.py  registry.py
mcp-client/demo/: client_fastapi.py  client_heartbeat.py  client_heartbeat_v2.py  client_tools.py  web_demo.md  web_demo.py
mcp-server/code_server/: code_agent_server.py
mcp-server/run_server/: run_server.py
mcp-server/vehicle_command/: command_server.py
mcp-server/weather/: weather_server.py
mcp-vue/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
mcp-vue/src/: App.vue  env.d.ts  main.ts
mcp-vue/src/api/: chat.ts  config.ts  index.ts  services.ts
mcp-vue/src/components/: ChatWindow.vue  ConfigManager.vue  ServiceRegister.vue  ServiceStatus.vue  SideBar.vue  ThemeSwitcher.vue
mcp-vue/src/router/: index.ts
mcp-vue/src/stores/: base.ts  chat.ts  services.ts
mcp-vue/src/types/: api.ts  services.ts
mcp-vue/src/utils/: theme.ts
mcp-vue/src/views/: Home.vue
