[project]
name = "mcp-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "uvicorn>=0.34.2",
    "zhipuai>=2.1.5.20250421",
]


#[tool.llm]
## 支持的类型：zhipuai, deepseek, openai_compatible
#provider = "zhipuai"
#api_key = "******"
#model = "glm-4-plus"
#base_url = "https://api.zhipuai.com/v1"

# 如果需要使用DeepSeek
 [tool.llm]
 provider = "deepseek"
 api_key = "******"
 model = "deepseek-chat"
 base_url = "https://api.deepseek.com"

## 如果需要使用自定义的OpenAI兼容API
# [tool.llm]
# provider = "openai_compatible"
# api_key = "******"
# model = "Deepseek-R1"
# base_url = "http://**.**.**.**:8080/v1"
